--- a/MvcToyApp.Tests/packages.config
+++ b/MvcToyApp.Tests/packages.config
@@ -1,13 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.2.0" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.2.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.NLog.Net4" version="2.1.2" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="FluentAssertions" version="4.6.1" targetFramework="net461" />
   <package id="Highway.Data" version="6.0.4.2" targetFramework="net461" />
   <package id="Highway.Data.EntityFramework" version="6.0.4.2" targetFramework="net461" />
   <package id="Highway.Pavement" version="0.3.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="3.0.20105.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="1.0.20105.408" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="NLog" version="4.3.4" targetFramework="net461" />
   <package id="RefactorThis.GraphDiff" version="2.0.1" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
