--- a/MvcToyApp/packages.config
+++ b/MvcToyApp/packages.config
@@ -1,13 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.2.0" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.2.0" targetFramework="net461" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Castle.Core-NLog" version="3.3.3" targetFramework="net461" />
+  <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net461" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net461" />
+  <package id="Castle.Windsor-NLog" version="3.3.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.NLog.Net4" version="2.1.2" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
   <package id="FluentAssertions" version="4.6.1" targetFramework="net461" />
   <package id="Highway.Data" version="6.0.4.2" targetFramework="net461" />
   <package id="Highway.Data.EntityFramework" version="6.0.4.2" targetFramework="net461" />
+  <package id="Highway.Onramp.MVC" version="3.0.2.0" targetFramework="net461" />
+  <package id="Highway.Onramp.MVC.Data" version="3.0.2.0" targetFramework="net461" />
   <package id="Highway.Pavement" version="0.3.0.0" targetFramework="net461" />
+  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net461" />
@@ -16,8 +30,25 @@
   <package id="Microsoft.ApplicationInsights.Web" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="1.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="NLog" version="4.3.4" targetFramework="net461" />
   <package id="RefactorThis.GraphDiff" version="2.0.1" targetFramework="net461" />
+  <package id="WebActivator" version="1.0.0.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
