--- a/MvcToyApp/MvcToyApp.csproj
+++ b/MvcToyApp/MvcToyApp.csproj
@@ -361,6 +361,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccountService.cs" />
+    <Compile Include="Data\Commands\DeleteUserById.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
